devSecurityGroup.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Resources": {
        "WebSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "dev Web server SecurityGroup",
                "GroupName": "dev-web",
                "VpcId": "vpc-a9d0fdd3",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 80,
                        "ToPort": 80,
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "devhttp"
                    }
                ]
            }
        },
        "SSHSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "dev ssh SecurityGroup",
                "GroupName": "dev-ssh",
                "VpcId": "vpc-a9d0fdd3",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 22,
                        "ToPort": 22,
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "devssh"
                    }
                ]
            }
        },
        "DatabaseSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Database server",
                "GroupName": "database",
                "VpcId": "vpc-a9d0fdd3",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 3306,
                        "ToPort": 3306,
                        "SourceSecurityGroupId": {
                            "Ref": "WebSecurityGroup"
                        }
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "devdatabase"
                    }
                ]
            }
        }
	},
    "Outputs": {
        "DatabaseSecurityGroup": {
            "Description": "A reference to the security group for dev database",
            "Value": {
                "Ref": "DatabaseSecurityGroup"
            }
        },
        "WebSecurityGroup": {
            "Description": "A reference to the security group for dev web server",
            "Value": {
                "Ref": "WebSecurityGroup"
            }
        },
        "SSHSecurityGroup": {
            "Description": "A reference to the security group for dev web server",
            "Value": {
                "Ref": "SSHSecurityGroup"
            }
        }
    }
}
